# iron-hermes

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PRODUCT.md  README.md  SECURITY.md  cli-config.yaml.example  env.example  install.sh  package-lock.json  package.json  quick_setup_script.ps1  quick_setup_script.sh  setup-ironhermes.sh  troubleshooting_guide.md
crates/iron_hermes_ui/: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  UAT-26.2.1.md
crates/iron_hermes_ui/.omc/: project-memory.json
crates/iron_hermes_ui/.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
crates/iron_hermes_ui/assets/: components.css  design-tokens.css  main.css  scanner-anim.css  screens.css  site.css  tailwind.css  tokens.css  warp-ih.css  wheel.css
crates/iron_hermes_ui/src/: app.rs  fonts.rs  main.rs  protocol.rs  state.rs  ui_prefs.rs
crates/iron_hermes_ui/tests/: list_sessions_returns_platform_web.rs  server_runtime_parity.rs  session_store_shared_with_gateway.rs  wave0_smoke.rs  websocket_lifecycle_parity.rs
crates/iron_hermes_ui/warp2ironhermes/: README.md
crates/ironagent-tools-api/: Cargo.toml
crates/ironagent-tools-api/src/: browser_back.rs  browser_close.rs  browser_get_images.rs  browser_navigate.rs  browser_press.rs  browser_scroll.rs  browser_session.rs  browser_snapshot.rs  browser_type.rs  delegate_task.rs  file_tools.rs  memory_manager_handle.rs  memory_tool.rs  skills_tool.rs  terminal.rs  web_local.rs
crates/ironagent-tools-api/tests/: browser_integration.rs  browser_prereq.rs  cronjob_tool_default_deliver.rs  delegate_task_timeout_cancel.rs  hub_search_test.rs  web_extract_integration.rs
crates/ironhermes-agent/: Cargo.toml
crates/ironhermes-agent/src/: agent_loop.rs  agent_runtime.rs  agent_wiring.rs  anthropic_client.rs  any_client.rs  app_runtime_factory.rs  budget.rs  client.rs  context_compressor.rs  context_engine.rs  context_loader.rs  context_refs.rs  context_scanner.rs  engine_factory.rs  lib.rs  memory_context.rs  memory_flush_handler.rs  nudge.rs  personality.rs  pressure_warning.rs  prompt_builder.rs  session_search.rs  shrike.rs  streaming_scrubber.rs  subagent_registry.rs  subagent_runner.rs  subdir_discovery.rs  summarizing_engine.rs  tool_pair.rs  transcript.rs
crates/ironhermes-agent/tests/: agent_loop_appended.rs  budget_concurrency_stress.rs  budget_ordering_grep.rs  budget_pressure_advisory_injection.rs  client_invariant.rs  invariants_27_1_4_1.rs  invariants_27_1_4_1_1.rs  invariants_33.rs  invariants_34b.rs  registration_guard.rs  shrike_service.rs  sqlite_mirror_fixture.rs  stale_warn_once.rs  subagent_registry_ops.rs  transcript_no_unwrap_lint.rs  transcript_roundtrip.rs  transcript_touch.rs
crates/ironhermes-cli/: Cargo.toml
crates/ironhermes-cli/src/: cli_args.rs  config_cli.rs  cron.rs  doctor.rs  io_gate.rs  lib.rs  main.rs  mcp_config.rs  memory_cmd.rs  memory_setup.rs  models_cmd.rs  preflight.rs  provider_cmd.rs  repl_input.rs  session_cmd.rs  setup.rs  skills_cmd.rs  status_cmd.rs  toolset_cmd.rs  yolo.rs
crates/ironhermes-cli/tests/: agents_list_live_mid_turn.rs  chat_memory_persistence.rs  cli_tool_parity.rs  cli_web_runtime_parity.rs  config_migrate_discovery.rs  config_show_integration.rs  config_show_redaction.rs  cron_default_deliver.rs  doctor_integration.rs  gateway_pid.rs  handlers_state_store.rs  invariants_21_7.rs  invariants_22_3.rs  invariants_22_3_streaming.rs  invariants_22_4.rs  invariants_25_3.rs  invariants_26_4_1_cfg_03.rs  invariants_27_1_4_1.rs  profile_first_use.rs  profile_isolation.rs  provider_integration.rs  repl_prompt_anchoring.rs  run_chat_invariants.rs  scenarios_cascade_cancel.rs  scenarios_yolo_guardrails.rs  session_export_e2e.rs  setup_wizard.rs  skill_registry_wiring.rs  skills_cmd_integration.rs  skills_cmd_test.rs  skills_reload_cli.rs  status_cmd_deep_probe.rs  status_cmd_integration.rs  status_cmd_probe_seam.rs  status_cmd_schema.rs  toolset_integration.rs  tui_rata_session_control.rs  tui_rata_snapshots.rs  tui_rata_toggles.rs  yolo_banner.rs
crates/ironhermes-core/: Cargo.toml
crates/ironhermes-core/src/: browser_profile.rs  config.rs  config_schema.rs  config_setter.rs  config_validate.rs  constants.rs  context_scanner.rs  error.rs  lib.rs  memory_provider.rs  memory_store.rs  model_metadata.rs  models_cache.rs  profile.rs  provider.rs  skills.rs  ssrf.rs  token_estimator.rs  types.rs  wizard.rs  workspace.rs
crates/ironhermes-core/tests/: cmd_agents_and_stop.rs  config_setter.rs  config_validate.rs  handlers_compressor.rs  handlers_cron.rs  handlers_personality.rs  handlers_provider.rs  memory_provider_contract.rs  trust_resolution_test.rs  wizard_flow.rs
crates/ironhermes-cron/: Cargo.toml  PARITY.md
crates/ironhermes-cron-runner/: Cargo.toml
crates/ironhermes-cron-runner/src/: delivery.rs  lib.rs  prompt_builder.rs  runner.rs  script_runner.rs  tick_loop.rs  timeout.rs
crates/ironhermes-cron/src/: adapter.rs  delivery.rs  display.rs  job.rs  lib.rs  parser.rs  scanner.rs  store.rs  tick.rs
crates/ironhermes-exec/: Cargo.toml
crates/ironhermes-exec/src/: hermes_tools.py  lib.rs  process_registry.rs  rpc_server.rs  sandbox.rs
crates/ironhermes-exec/tests/: cascade_cancel_bench.rs  process_registry_ops.rs  process_registry_watch_rate_limit.rs  scenarios_process_registry.rs  terminal_execute_code_integration.rs
crates/ironhermes-gateway/: Cargo.toml
crates/ironhermes-gateway/src/: adapter.rs  backoff.rs  discord.rs  handler.rs  lib.rs  multimodal.rs  pid.rs  rate_limiter.rs  runner.rs  session.rs  slack.rs  stream_consumer.rs  telegram.rs  user_queue.rs
crates/ironhermes-gateway/tests/: agents_confirm.rs  cron_delivery.rs  gateway_shutdown.rs  (+5 more)
crates/ironhermes-hooks/: Cargo.toml
crates/ironhermes-hub/: Cargo.toml
crates/ironhermes-mcp/: Cargo.toml
crates/ironhermes-state/: Cargo.toml
crates/ironhermes-tools/: Cargo.toml
crates/ironhermes-trajectory/: Cargo.toml
providers/memory-duckdb/: Cargo.toml
providers/memory-grafeo/: Cargo.toml
providers/memory-sqlite/: Cargo.toml
(+1971 files in other folders)
