[workspace]
members = [
    "crates/ironhermes-core",
    "crates/ironhermes-state",
    "crates/ironhermes-tools",
    "crates/ironhermes-agent",
    "crates/ironhermes-cli",
    "crates/ironhermes-gateway",
    "crates/ironhermes-cron",
    "crates/ironhermes-hooks",
    "crates/ironhermes-exec",
    "crates/ironhermes-hub",
    "crates/ironhermes-mcp",
    "providers/memory-sqlite",
    "providers/memory-grafeo",
    "providers/memory-duckdb",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nous Research"]
license = "MIT"
description = "IronHermes — The self-improving AI agent, rewritten in Rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "gzip", "brotli", "deflate"], default-features = false }
scraper = "0.26"
htmd = "0.5"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
# CLI
clap = { version = "4", features = ["derive"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
anyhow = "1"
thiserror = "2"
# Env
dotenvy = "0.15"
dirs = "6"
# Async trait
async-trait = "0.1"
# Streaming
tokio-stream = "0.1"
futures = "0.3"
# Time
chrono = { version = "0.4", features = ["serde"] }
# UUID
uuid = { version = "1", features = ["v4"] }
# Regex
regex = "1"
# Glob
glob = "0.3"
# Terminal UI
crossterm = { version = "0.29", features = ["event-stream"] }
colored = "3"
indicatif = "0.17"
rustyline = "15"
# Cron
cron = "0.13"
# Async utilities
tokio-util = { version = "0.7", features = ["rt"] }
# PDF extraction
pdf-extract = "0.10"
# Base64 encoding
base64 = "0.22"
# File locking
fs2 = "0.4"
# URL parsing
url = "2"
# HMAC signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# Skills Hub (Phase 19.1)
tempfile = "3"
flate2 = "1.1"
tar = "0.4"
wiremock = "0.6"
# Phase 21.7 Wave 0 additions
insta = { version = "1", features = ["yaml"] }
assert_cmd = "2"
predicates = "3"
tracing-test = "0.2"
sysinfo = "0.30"
nix = { version = "0.29", features = ["process"] }
# ISS-10: shell-words workspace dep (Plan 02 Task 2-02 consumer)
shell-words = "1"
# Phase 22.4: ratatui-backed REPL (tmon architecture) — D-13/D-14 dep floor
ansi-to-tui = "8"
ratatui = "0.30"
tui-logger = { version = "0.18", features = ["tracing-support"] }
tui-textarea-2 = "0.10.2"
