[package]
name = "iron_hermes_ui"
version = "0.1.0"
authors = ["Brad Wilson <bradwilson331@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "=0.7.1", features = [] }
gloo-timers = { version = "0.3", features = ["futures"] }
tokio = { version = "1", features = ["time"], default-features = false }
web-sys = { version = "0.3", features = [
    "Window",
    "Element",
    "Document",
    "Navigator",
    "Clipboard",
    "EventTarget",
    "KeyboardEvent",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
# Test-only features for `#[tokio::test]` (macros + rt). Production tokio
# stays at `time` only per CONTEXT D-05 to keep native binary lean.
tokio = { version = "1", features = ["macros", "rt", "time"], default-features = false }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
