[package]
name = "iron_hermes_ui"
version = "0.1.0"
authors = ["Brad Wilson <bradwilson331@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7", features = ["fullstack"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Minimal tokio for platform/timer.rs (native sleep); `server` feature adds `full`.
tokio = { version = "1", features = ["time"], default-features = false }

# Client-only deps (WASM)
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Element",
    "Document",
    "Navigator",
    "Clipboard",
    "EventTarget",
    "KeyboardEvent",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"

# Server-only deps — optional, activated by `server` feature
axum = { version = "=0.8.4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Server-only deps — behind cfg gate so WASM client never compiles them
ironhermes-core = { path = "../ironhermes-core" }
ironhermes-agent = { path = "../ironhermes-agent" }
ironhermes-exec = { path = "../ironhermes-exec" }
ironhermes-hooks = { path = "../ironhermes-hooks" }
ironhermes-state = { path = "../ironhermes-state" }
ironhermes-tools = { path = "../ironhermes-tools" }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
# Test-only features for `#[tokio::test]` (macros + rt).
tokio = { version = "1", features = ["macros", "rt", "time"], default-features = false }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:axum", "tokio/full"]
demo = []
