[package]
name = "iron_hermes_ui"
version = "0.1.0"
authors = ["Brad Wilson <bradwilson331@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "=0.7.1", features = ["fullstack"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Minimal tokio for platform/timer.rs (native sleep); `server` feature adds `full`.
tokio = { version = "1", features = ["time"], default-features = false }

# Client-only deps (WASM)
gloo-timers = { version = "0.3", features = ["futures"] }
# Phase 26.7.1 Plan 01 (UAT-4 hotfix): std::time::Instant panics on wasm32
# ("time not implemented on this platform"). web_time::Instant is a drop-in
# replacement: pub use std::time::Instant on native, Performance.now()-backed
# shim on wasm32. Same API, no API divergence.
web-time = "1.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Element",
    "Document",
    "Navigator",
    "Clipboard",
    "EventTarget",
    "KeyboardEvent",
    "Storage",
    "HtmlElement",
    "DomTokenList",
    "CssStyleDeclaration",
    "DomRect",
    "PointerEvent",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"

# Server-only deps — optional, activated by `server` feature
axum = { version = "=0.8.4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Server-only deps — behind cfg gate so WASM client never compiles them
ironhermes-core = { path = "../ironhermes-core" }
ironhermes-agent = { path = "../ironhermes-agent" }
ironhermes-exec = { path = "../ironhermes-exec" }
ironhermes-hooks = { path = "../ironhermes-hooks" }
ironhermes-state = { path = "../ironhermes-state" }
ironhermes-tools = { path = "../ironhermes-tools" }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
# Test-only features for `#[tokio::test]` (macros + rt).
tokio = { version = "1", features = ["macros", "rt", "time"], default-features = false }
# Phase 32.2-05: CancellationToken needed by subagent_tree_json test in state.rs.
tokio-util = { workspace = true }
# Phase 34-02: behavioral test for list_sessions Platform::Web filter.
tempfile = "3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:axum", "tokio/full"]
demo = []
# Phase 26.2.1: Gate the legacy Warp-style shell behind an opt-in feature.
# Default builds mount the new wheel-driven `HermesApp`; enable `legacy-shell`
# to mount `WarpHermes` instead (kept compiling as a UAT fallback).
legacy-shell = []
