[package]
name = "ironhermes-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Agent loop and LLM client for IronHermes"

[features]
memory-sqlite = ["dep:memory-sqlite"]
memory-duckdb = []
memory-grafeo = ["dep:memory-grafeo"]

[dependencies]
ironhermes-core = { path = "../ironhermes-core" }
ironhermes-tools = { path = "../ironhermes-tools" }
ironhermes-state = { path = "../ironhermes-state" }
ironhermes-hooks = { path = "../ironhermes-hooks" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
memory-sqlite = { path = "../../providers/memory-sqlite", optional = true }
memory-grafeo = { path = "../../providers/memory-grafeo", optional = true }

[dev-dependencies]
tempfile = "3"
