[package]
name = "ironhermes-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Agent loop and LLM client for IronHermes"

[features]
memory-sqlite = ["dep:memory-sqlite"]
memory-duckdb = ["dep:memory-duckdb"]
memory-grafeo = ["dep:memory-grafeo"]
test-support = []

[dependencies]
ironhermes-core = { path = "../ironhermes-core" }
ironhermes-tools = { path = "../ironhermes-tools" }
ironhermes-state = { path = "../ironhermes-state" }
ironhermes-hooks = { path = "../ironhermes-hooks" }
ironhermes-trajectory = { path = "../ironhermes-trajectory" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
memory-sqlite = { path = "../../providers/memory-sqlite", optional = true }
memory-grafeo = { path = "../../providers/memory-grafeo", optional = true }
memory-duckdb = { path = "../../providers/memory-duckdb", optional = true }

[dev-dependencies]
tempfile = "3"
# Phase 21.7 Wave 0 — BudgetHandle + transcript + pressure tests
tracing-test = { workspace = true }
insta = { workspace = true }
# Phase 25.1 GAP-7 — pre-send invariant integration tests
wiremock = { workspace = true }
