[package]
name = "ironhermes-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Interactive CLI for IronHermes"

[[bin]]
name = "ironhermes"
path = "src/main.rs"

[lib]
name = "ironhermes_cli"
path = "src/lib.rs"

[features]
memory-sqlite = ["ironhermes-agent/memory-sqlite"]
memory-duckdb = ["ironhermes-agent/memory-duckdb"]
memory-grafeo = ["ironhermes-agent/memory-grafeo"]

[dependencies]
ironhermes-core = { path = "../ironhermes-core" }
ironhermes-agent = { path = "../ironhermes-agent" }
ironhermes-tools = { path = "../ironhermes-tools" }
# Plan 21.7-06 (D-29): ProcessRegistry constructor at the three main.rs call sites
ironhermes-exec = { path = "../ironhermes-exec" }
ironhermes-state = { path = "../ironhermes-state" }
ironhermes-gateway = { path = "../ironhermes-gateway" }
ironhermes-cron = { path = "../ironhermes-cron" }
ironhermes-hooks = { path = "../ironhermes-hooks" }
ironhermes-hub = { path = "../ironhermes-hub" }
ironhermes-mcp = { path = "../ironhermes-mcp" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
rustyline = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
wiremock = { workspace = true }
hex = { workspace = true }
# Phase 21.7 Wave 0 — dev-deps consumed by Wave 1+ tests
insta = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tracing-test = { workspace = true }
