[package]
name = "ironhermes-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Interactive CLI for IronHermes"

[[bin]]
name = "ironhermes"
path = "src/main.rs"

[lib]
name = "ironhermes_cli"
path = "src/lib.rs"

[features]
memory-sqlite = ["ironhermes-agent/memory-sqlite"]
memory-duckdb = ["ironhermes-agent/memory-duckdb"]
memory-grafeo = ["ironhermes-agent/memory-grafeo"]
test-support = ["ironhermes-agent/test-support"]

[dependencies]
ironhermes-core = { path = "../ironhermes-core" }
ironhermes-agent = { path = "../ironhermes-agent" }
ironhermes-tools = { path = "../ironhermes-tools" }
# Plan 21.7-06 (D-29): ProcessRegistry constructor at the three main.rs call sites
ironhermes-exec = { path = "../ironhermes-exec" }
ironhermes-state = { path = "../ironhermes-state" }
ironhermes-gateway = { path = "../ironhermes-gateway" }
ironhermes-cron = { path = "../ironhermes-cron" }
ironhermes-cron-runner = { path = "../ironhermes-cron-runner" }
ironhermes-hooks = { path = "../ironhermes-hooks" }
ironhermes-hub = { path = "../ironhermes-hub" }
ironhermes-mcp = { path = "../ironhermes-mcp" }
# Phase 25.3 D-T-3: cli opens TrajectoryWriter at session start in run_chat,
# run_single, run_gateway, AND tui_rata::build_app_deps; the resulting handle
# is wrapped in TrajectoryWriterHandleImpl and threaded into CommandContext.
ironhermes-trajectory = { path = "../ironhermes-trajectory" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm = { workspace = true }
ansi-to-tui = { workspace = true }
ratatui = { workspace = true }
tui-logger = { workspace = true }
tui-textarea-2 = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
rustyline = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
# Phase 21.7 Plan 09 Task 9-03 (D-21): LiveDeepProbe uses reqwest for
# provider HEAD probes and rusqlite for FTS5 `PRAGMA integrity_check`.
reqwest = { workspace = true }
rusqlite = { workspace = true }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
wiremock = { workspace = true }
hex = { workspace = true }
# Phase 21.7 Wave 0 — dev-deps consumed by Wave 1+ tests
insta = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tracing-test = { workspace = true }
# Phase 21.7 Plan 10 — cascade-cancel scenarios (S-01/S-02) need sysinfo
# for PID-liveness oracle; scenarios_yolo_guardrails walks the agent/tool
# source tree for the S-08 stdin gate.
sysinfo = { workspace = true }
walkdir = "2"
