[package]
name = "ironhermes-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and configuration for IronHermes"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
fs2 = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
