[package]
name = "ironhermes-cron"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cron scheduler for IronHermes"

[dependencies]
ironhermes-core = { path = "../ironhermes-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }

[dev-dependencies]
tempfile = "3"
