[package]
name = "ironhermes-exec"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tempfile = "3"
libc = "0.2"
tokio-util = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
