[package]
name = "ironhermes-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-platform messaging gateway for IronHermes"

[dependencies]
ironhermes-core = { path = "../ironhermes-core" }
ironhermes-agent = { path = "../ironhermes-agent" }
ironhermes-tools = { path = "../ironhermes-tools" }
ironhermes-state = { path = "../ironhermes-state" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
pdf-extract = { workspace = true }
base64 = { workspace = true }
