[package]
name = "ironhermes-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-platform messaging gateway for IronHermes"

[dependencies]
ironhermes-core = { path = "../ironhermes-core" }
ironhermes-agent = { path = "../ironhermes-agent" }
ironhermes-tools = { path = "../ironhermes-tools" }
# Plan 21.7-06 (D-29): gateway handler threads ProcessRegistry through from the runner.
ironhermes-exec = { path = "../ironhermes-exec" }
ironhermes-state = { path = "../ironhermes-state" }
ironhermes-cron = { path = "../ironhermes-cron" }
ironhermes-hooks = { path = "../ironhermes-hooks" }
ironhermes-mcp = { path = "../ironhermes-mcp" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
pdf-extract = { workspace = true }
base64 = { workspace = true }
tempfile = "3"

[dev-dependencies]
# tempfile promoted to [dependencies] — needed at runtime for write_gateway_pid atomic write (Phase 24 D-10)
