[package]
name = "ironhermes-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-platform messaging gateway for IronHermes"

[dependencies]
ironhermes-core = { path = "../ironhermes-core" }
ironhermes-agent = { path = "../ironhermes-agent" }
ironhermes-tools = { path = "../ironhermes-tools" }
# Plan 21.7-06 (D-29): gateway handler threads ProcessRegistry through from the runner.
ironhermes-exec = { path = "../ironhermes-exec" }
ironhermes-state = { path = "../ironhermes-state" }
ironhermes-cron = { path = "../ironhermes-cron" }
ironhermes-cron-runner = { path = "../ironhermes-cron-runner" }
ironhermes-hooks = { path = "../ironhermes-hooks" }
ironhermes-mcp = { path = "../ironhermes-mcp" }
# Phase 25.3 D-T-3: gateway opens TrajectoryWriter alongside StateStore and
# threads the resulting handle through GatewayRunner -> GatewayMessageHandler ->
# per-message CommandContext.
ironhermes-trajectory = { path = "../ironhermes-trajectory" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
pdf-extract = { workspace = true }
base64 = { workspace = true }
nix = { workspace = true, features = ["signal"] }
tempfile = "3"

[dev-dependencies]
# tempfile promoted to [dependencies] — needed at runtime for write_gateway_pid atomic write (Phase 24 D-10)
