[package]
name = "ironhermes-hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Event hook system for IronHermes"

[dependencies]
ironhermes-core = { path = "../ironhermes-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = "0.8"
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
