[package]
name = "ironhermes-state"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SQLite state store for IronHermes"

[dependencies]
ironhermes-core = { path = "../ironhermes-core" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
