[package]
name = "ironhermes-state"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SQLite state store for IronHermes"

[dependencies]
ironhermes-core = { path = "../ironhermes-core" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
# Phase 25.1 GAP-7 — round-trip regression tests open a sibling rusqlite
# connection to force a timestamp inversion; ironhermes-core is already a
# regular dep so validate_tool_call_pairing is reachable in integration tests.
rusqlite = { workspace = true }
