[package]
name = "ironhermes-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tool registry and implementations for IronHermes"

[dependencies]
ironhermes-core = { path = "../ironhermes-core" }
ironhermes-hub = { path = "../ironhermes-hub" }
ironhermes-cron = { path = "../ironhermes-cron" }
ironhermes-hooks = { path = "../ironhermes-hooks" }
ironhermes-exec = { path = "../ironhermes-exec" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
scraper = { workspace = true }
htmd = { workspace = true }
tokio-util = { workspace = true }
tempfile = "3"

[dev-dependencies]
# Phase 21.7 Plan 08 Task 8-03: tracing-test with `no-env-filter` so
# `#[traced_test]` captures logs from any target (not just the test
# binary crate). Required because the production warn target is
# `ironhermes_tools::delegate_task`, which would otherwise be filtered
# out by the default `{crate}=trace` env filter.
tracing-test = { workspace = true, features = ["no-env-filter"] }
tokio = { workspace = true, features = ["full", "test-util"] }
