[package]
name = "ironhermes-trajectory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Append-only JSONL trajectory ledger for IronHermes (per-tool-call records, Phase 25.3 D-T-1)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
