[package]
name = "memory-duckdb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DuckDB columnar memory provider for IronHermes"

[dependencies]
ironhermes-core = { path = "../../crates/ironhermes-core" }
duckdb = { version = "1", features = ["bundled"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
